--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.2",
     "next": "latest",
+    "next-pwa": "^5.6.0",
     "nprogress": "^0.2.0",
     "pattern.css": "^1.0.0",
     "react": "18.1.0",
