--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.2",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "next": "latest",
     "next-pwa": "^5.6.0",
     "nprogress": "^0.2.0",
